force-app/main/default/objects/CCPA_Request__c/CCPA_Request__c.object-meta.xml
<CustomObject>
    <description>CCPA Request tracking with 45-day SLA compliance</description>
    <label>CCPA Request</label>
    <nameField>
        <displayFormat>CCPA-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCPA Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>