force-app/main/default/objects/CCPA_Request__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>DateTime</type>
    <description>Date and time when the CCPA request was completed. Used to calculate response time and verify compliance with 45-day deadline requirements.</description>
    <inlineHelpText>When the request was fulfilled</inlineHelpText>
</CustomField>