force-app/main/default/objects/CCPA_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Consumer who made the CCPA request</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CCPA Requests</relationshipLabel>
    <relationshipName>CCPA_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>