force-app/main/default/objects/CCPA_Request__c/fields/Days_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Complete__c</fullName>
    <label>Days To Complete</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Number of days taken to complete the CCPA request. Used for performance reporting and SLA tracking. Target is under 45 days per CCPA requirements.</description>
    <inlineHelpText>Days from request to completion (target: &lt;45)</inlineHelpText>
</CustomField>