force-app/main/default/objects/CCPA_Request__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <description>Date and time the consumer submitted the CCPA request. This date starts the 45-day compliance clock and is used to calculate the Response Deadline.</description>
    <inlineHelpText>When the consumer submitted the request</inlineHelpText>
    <label>Request Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>