force-app/main/default/objects/CCPA_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>Type of CCPA request</description>
    <label>Request Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Right to Know</fullName>
            </value>
            <value>
                <fullName>Right to Delete</fullName>
            </value>
            <value>
                <fullName>Do Not Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>