force-app/main/default/objects/CCPA_Request__c/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <description>Date and time the response was provided</description>
    <label>Response Date</label>
    <type>DateTime</type>
</CustomField>