force-app/main/default/objects/CCPA_Request__c/fields/Response_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Response_Deadline__c</fullName>
    <description>Calculated 45-day deadline for CCPA response. CCPA requires businesses to respond within 45 calendar days, with one 45-day extension available if needed.</description>
    <inlineHelpText>45 days from request date (CCPA requirement)</inlineHelpText>
    <formula>DATEVALUE(Request_Date__c) + 45</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Deadline</label>
    <type>Date</type>
</CustomField>